register and login works

--- a/src/zakupy_dla_seniora/templates/register.html
+++ b/src/zakupy_dla_seniora/templates/register.html
@@ -60,9 +60,9 @@
                 <div class="uk-inline">
                     <span class="uk-form-icon" uk-icon="icon: user"></span>
                     {% if message %}
-                    <input class="uk-input uk-form-danger uk-form-width-medium" type="email" name="email" placeholder="Username">
+                    <input class="uk-input uk-form-danger uk-form-width-medium" type="email" name="email" placeholder="Email">
                     {% else %}
-                    <input class="uk-input uk-form-width-medium" type="email" name="email" placeholder="Username">
+                    <input class="uk-input uk-form-width-medium" type="email" name="email" placeholder="Email">
                     {% endif %}
                 </div>
             </div>
